--- a/front/src/index.css
+++ b/front/src/index.css
@@ -5,3 +5,11 @@
 @import "tailwindcss/theme.css" layer(theme);
 @import "tailwindcss/preflight.css" layer(base);
 @import "tailwindcss/utilities.css" layer(utilities);
+
+.textinput-standard{
+    @apply bg-neutral-300 dark:bg-neutral-800 mx-8 my-4 py-2 px-4 rounded-lg caret-rose-500 ring-2 ring-white invalid:ring-rose-500 focus:ring-rose-300 focus:outline-none basis-full transition ease-in-out duration-300;
+}
+
+.transition-width{
+    transition-property: width;
+}
