--- a/front/src/index.css
+++ b/front/src/index.css
@@ -6,6 +6,13 @@
 @import "tailwindcss/preflight.css" layer(base);
 @import "tailwindcss/utilities.css" layer(utilities);
 
+@theme{
+    --error: #FF8C8C;
+    --warning: #FFFB82;
+    --info: #D9D9D9;
+}
+
+
 @layer base {
     :root{
         @apply bg-neutral-100 dark:bg-[#1c1c1d] h-[100vh] w-[100vw] block box-border font-[Sansation] text-black dark:text-white;
@@ -13,7 +20,7 @@
 }
 
 .textinput-standard{
-    @apply bg-neutral-300 dark:bg-neutral-800 mx-8 my-4 py-2 px-4 rounded-lg caret-rose-500 ring-2 ring-white invalid:ring-rose-500 focus:ring-rose-300 focus:outline-none basis-full transition ease-in-out duration-300;
+    @apply bg-neutral-300 dark:bg-neutral-800 my-4 py-2 px-4 mx-[2px] rounded-lg caret-rose-500 ring-2 ring-white invalid:ring-rose-500 focus:ring-rose-300 focus:outline-none basis-full transition ease-in-out duration-300 min-w-0;
 }
 
 .transition-width{
