Added listing editing in back and frontend

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -10,6 +10,7 @@
     --error: #FF8C8C;
     --warning: #FFFB82;
     --info: #D9D9D9;
+    --success: #AEEA72;
 
     --dark: #1c1c1d;
     --mid-dark: #262626;
