--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -54,6 +54,10 @@
     @apply w-full rounded-lg bg-neutral-800 px-4 py-3 text-white placeholder-neutral-500 outline-none ring-1 ring-transparent transition-all focus:bg-neutral-800 focus:ring-2 focus:ring-rose-500;
 }
 
+.textinput-slim{
+    @apply w-full rounded-lg bg-neutral-800 px-2 py-1.5 text-white placeholder-neutral-500 outline-none ring-1 ring-transparent transition-all focus:bg-neutral-800 focus:ring-2 focus:ring-rose-500;
+}
+
 .authcode{
     @apply w-1/6 aspect-square rounded-lg bg-neutral-800 py-4 text-white placeholder-neutral-500 outline-none ring-1 ring-transparent transition-all focus:bg-neutral-800 focus:ring-2 focus:ring-rose-500 text-center text-xl;
 }
