Finished management page, added profile pictures, and upload abstractions

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -78,3 +78,11 @@
 .transition-height{
     transition-property: height;
 }
+
+.hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+}
